--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^7.5.2",
     "mysql2": "^3.7.0",
     "nodemon": "^3.0.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.35.2"
   }
 }
